fix spacing between results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h1 {
 
 #results {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
